<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.stonebreak</groupId>
    <artifactId>stonebreak-parent</artifactId>
    <version>1.0-SNAPSHOT</version>
    <packaging>pom</packaging>

    <modules>
        <module>openmason-engine</module>
        <module>stonebreak-game</module>
        <module>openmason-tool</module>
    </modules>

    <properties>
        <maven.compiler.source>25</maven.compiler.source>
        <maven.compiler.target>25</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <lwjgl.version>3.4.1</lwjgl.version>
        <joml.version>1.10.8</joml.version>
        <lwjgl.natives>natives-windows</lwjgl.natives>
        <jackson.version>2.21.3</jackson.version>
        <jackson.version.annotations>2.21</jackson.version.annotations>
        <junit.version>6.0.3</junit.version>
        <mockito.version>5.23.0</mockito.version>
        <skija.version>0.143.13</skija.version>
        <sqlite.version>3.53.1.0</sqlite.version>
    </properties>

    <dependencyManagement>
        <dependencies>
            <!-- LWJGL core -->
            <dependency>
                <groupId>org.lwjgl</groupId>
                <artifactId>lwjgl</artifactId>
                <version>${lwjgl.version}</version>
            </dependency>
            <dependency>
                <groupId>org.lwjgl</groupId>
                <artifactId>lwjgl</artifactId>
                <version>${lwjgl.version}</version>
                <classifier>${lwjgl.natives}</classifier>
                <scope>runtime</scope>
            </dependency>
            
            <!-- LWJGL OpenGL -->
            <dependency>
                <groupId>org.lwjgl</groupId>
                <artifactId>lwjgl-opengl</artifactId>
                <version>${lwjgl.version}</version>
            </dependency>
            <dependency>
                <groupId>org.lwjgl</groupId>
                <artifactId>lwjgl-opengl</artifactId>
                <version>${lwjgl.version}</version>
                <classifier>${lwjgl.natives}</classifier>
                <scope>runtime</scope>
            </dependency>
            
            <!-- LWJGL GLFW for window creation -->
            <dependency>
                <groupId>org.lwjgl</groupId>
                <artifactId>lwjgl-glfw</artifactId>
                <version>${lwjgl.version}</version>
            </dependency>
            <dependency>
                <groupId>org.lwjgl</groupId>
                <artifactId>lwjgl-glfw</artifactId>
                <version>${lwjgl.version}</version>
                <classifier>${lwjgl.natives}</classifier>
                <scope>runtime</scope>
            </dependency>
            
            <!-- LWJGL STB for image loading -->
            <dependency>
                <groupId>org.lwjgl</groupId>
                <artifactId>lwjgl-stb</artifactId>
                <version>${lwjgl.version}</version>
            </dependency>
            <dependency>
                <groupId>org.lwjgl</groupId>
                <artifactId>lwjgl-stb</artifactId>
                <version>${lwjgl.version}</version>
                <classifier>${lwjgl.natives}</classifier>
                <scope>runtime</scope>
            </dependency>
            
            <!-- Skija (HumbleUI fork) — Skia bindings for next-gen UI rendering.
                 Platform jar is self-contained; switch classifier when targeting
                 other OSes (skija-linux-x64, skija-macos-arm64, etc.). -->
            <dependency>
                <groupId>io.github.humbleui</groupId>
                <artifactId>skija-windows-x64</artifactId>
                <version>${skija.version}</version>
            </dependency>

            <!-- LWJGL OpenAL for audio -->
            <dependency>
                <groupId>org.lwjgl</groupId>
                <artifactId>lwjgl-openal</artifactId>
                <version>${lwjgl.version}</version>
            </dependency>
            <dependency>
                <groupId>org.lwjgl</groupId>
                <artifactId>lwjgl-openal</artifactId>
                <version>${lwjgl.version}</version>
                <classifier>${lwjgl.natives}</classifier>
                <scope>runtime</scope>
            </dependency>
            
            <!-- Java OpenGL Math Library -->
            <dependency>
                <groupId>org.joml</groupId>
                <artifactId>joml</artifactId>
                <version>${joml.version}</version>
            </dependency>
            
            <!-- Jackson JSON library for texture definition parsing -->
            <dependency>
                <groupId>com.fasterxml.jackson.core</groupId>
                <artifactId>jackson-databind</artifactId>
                <version>${jackson.version}</version>
            </dependency>
            <dependency>
                <groupId>com.fasterxml.jackson.core</groupId>
                <artifactId>jackson-core</artifactId>
                <version>${jackson.version}</version>
            </dependency>
            <dependency>
                <groupId>com.fasterxml.jackson.core</groupId>
                <artifactId>jackson-annotations</artifactId>
                <version>${jackson.version.annotations}</version>
            </dependency>
            <dependency>
                <groupId>com.fasterxml.jackson.datatype</groupId>
                <artifactId>jackson-datatype-jsr310</artifactId>
                <version>${jackson.version}</version>
            </dependency>
            
            <!-- SQLite JDBC driver — powers FastLod persistent cache. -->
            <dependency>
                <groupId>org.xerial</groupId>
                <artifactId>sqlite-jdbc</artifactId>
                <version>${sqlite.version}</version>
            </dependency>

            <!-- JUnit 5 (Jupiter) for testing -->
            <dependency>
                <groupId>org.junit.jupiter</groupId>
                <artifactId>junit-jupiter-api</artifactId>
                <version>${junit.version}</version>
                <scope>test</scope>
            </dependency>
            <dependency>
                <groupId>org.junit.jupiter</groupId>
                <artifactId>junit-jupiter-engine</artifactId>
                <version>${junit.version}</version>
                <scope>test</scope>
            </dependency>

            <!-- Mockito for mocking in tests -->
            <dependency>
                <groupId>org.mockito</groupId>
                <artifactId>mockito-core</artifactId>
                <version>${mockito.version}</version>
                <scope>test</scope>
            </dependency>
            <!-- JUnit Platform Suite for test suites -->
            <dependency>
                <groupId>org.junit.platform</groupId>
                <artifactId>junit-platform-suite-api</artifactId>
                <version>6.0.3</version>
                <scope>test</scope>
            </dependency>
            <dependency>
                <groupId>org.junit.platform</groupId>
                <artifactId>junit-platform-suite-engine</artifactId>
                <version>6.0.3</version>
                <scope>test</scope>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <build>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <version>3.15.0</version>
                    <configuration>
                        <release>25</release>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-shade-plugin</artifactId>
                    <version>3.6.2</version>
                </plugin>
                <plugin>
                    <groupId>org.codehaus.mojo</groupId>
                    <artifactId>exec-maven-plugin</artifactId>
                    <version>3.6.3</version>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-clean-plugin</artifactId>
                    <version>3.5.0</version>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-resources-plugin</artifactId>
                    <version>3.5.0</version>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-surefire-plugin</artifactId>
                    <version>3.5.5</version>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-jar-plugin</artifactId>
                    <version>3.5.0</version>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-install-plugin</artifactId>
                    <version>3.1.4</version>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-deploy-plugin</artifactId>
                    <version>3.1.4</version>
                </plugin>
            </plugins>
        </pluginManagement>
        
        <plugins>
            <!-- Enable compilation for all modules -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
            </plugin>
            
            <!-- Ensure proper resource handling -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-resources-plugin</artifactId>
            </plugin>
        </plugins>
    </build>
</project>
